syntax = "proto3";

package auth;

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  rpc Refresh (RefreshRequest) returns (RefreshResponse) {}

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc FindUserById (FindUserByIdRequest) returns (FindUserByIdResponse) {}
  rpc FindManyUsers (FindManyUsersRequest) returns (FindManyUsersResponse) {}
}

message PageFilters{
  int32 page = 1;
  int32 limit = 2;
}

/// ---------------------- Auth -----------------------

//| SignUp

message SignUpRequest {
  string email = 1;
  string password = 2;
  string firstname = 3;
  string surname = 4;
  string sex = 5;
  string birthday = 6;
  string country = 7;
  string city = 8;
  string native_language = 9;
  string nickname = 10;
  string phone_number = 11;
}

message SignUpResponse {
  int32 status = 1;
  repeated string error = 2;
}

//| SignIn

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  int32 status = 1;
  repeated string error = 2;
  string access_token = 3;
  string refresh_token = 4;
}

//| Validate

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  string user_id = 3;
}

//| Refresh

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  int32 status = 1;
  repeated string error = 2;
  string access_token = 3;
  string refresh_token = 4;
}

/// ---------------------- User -----------------------


//| FindUserById

message FindUserByIdRequest {
  string user_id = 1;
}

message FindUserByIdResponse {

  message User {
    message UserContacts{
      string email = 1;
      string phone_number = 2;
    }
    message UserCredentials{
      string nickname = 1;
    }
    string id = 1;
    string firstname = 2;
    string surname = 3;
    string sex = 4;
    string birthday = 5;
    string country = 6;
    string city = 7;
    string native_language = 8;
    UserContacts user_contacts = 9;
    UserCredentials user_credentials = 10;
  }
  int32 status = 1;
  repeated string error = 2;
  User user = 3;
}

//| FindManyUsers

message FindManyUsersData {
  int32 count = 1;
  repeated FindUserByIdResponse.User rows = 2;
}

message FindManyUsersRequest {
  PageFilters page_filters = 1;
}

message FindManyUsersResponse {
  int32 status = 1;
  repeated string error = 2;
  FindManyUsersData data = 3;
}

//| UpdateUser

message UpdateUserRequest {
  string id = 1;
  string password = 2;
  string firstname = 3;
  string surname = 4;
  string sex = 5;
  string birthday = 6;
  string country = 7;
  string city = 8;
  string native_language = 9;
  string nickname = 10;
  string phone_number = 11;
}

message UpdateUserResponse {
  int32 status = 1;
  repeated string error = 2;
}